--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
   margin:auto;
   background-color: #e9e9e9;
-    font-family: 'Proxima Nova', Georgia, sans-serif;
+    font-family: 'Proxima Nova', open-sans, sans-serif;
 }
 
 a {
