--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,25 @@ width:60%;
 max-width:400px;
 }
 
+input[type="search"] 
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none; 
+  border-radius: 0 3px 3px 0;
+  -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+  box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+  border-style:none;
+  border-radius: 5px;
+  font-size: 15px;
+  padding:10px 10px 10px 10px;
+  width:60%;
+  max-width:400px;
+}
+
+
+
 input:focus {
     outline-color: #31A9DD;
     outline-width: 4px;
@@ -98,6 +117,33 @@ input:focus {
 }
 
 #mc_embed_signup .button:hover {
+    background-color: #6AC8F1;
+    cursor: pointer;
+}
+
+.button {
+    font-size: 13px;
+    border: none;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    letter-spacing: .03em;
+    color: #fff;
+    background-color: #31A9DD;
+    box-sizing: border-box;
+    height: 38px;
+    width:100%;
+    line-height: 32px;
+    padding: 4px 18px;
+    display: inline-block;
+    margin: 0;
+    transition: all 0.23s ease-in-out 0s;
+    -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2);
+}
+
+.button:hover {
     background-color: #6AC8F1;
     cursor: pointer;
 }
