--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,17 @@ input[type="submit"] {
   max-width:400px;
 }
 
-
+input {
+-webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+-moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+border-style:none;
+border-radius: 5px;
+font-size: 15px;
+padding:10px 10px 10px 10px;
+width:60%;
+max-width:400px;
+}
 
 input:focus {
     outline-color: #31A9DD;
