--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
   background-size: cover;
   min-height:320px;
   height:40vh;
-  border-bottom:16px solid #fff;
+  /*border-bottom:16px solid #fff;*/
   /*-webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);*/
