--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,9 @@ input[type="submit"] {
 }
 
 input {
--webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
--moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+-webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2) !important;
+-moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2) !important;
+box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2) !important;
 border-style:none;
 border-radius: 5px;
 font-size: 15px;
