--- a/css/style.css
+++ b/css/style.css
@@ -50,21 +50,9 @@ width:60%;
 max-width:400px;
 }
 
-input[type="search"] 
-input[type="text"],
-input[type="button"],
-input[type="submit"] {
-  -webkit-appearance: none; 
-  border-radius: 0 3px 3px 0;
-  -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
-  box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
-  border-style:none;
-  border-radius: 5px;
-  font-size: 15px;
-  padding:10px 10px 10px 10px;
-  width:60%;
-  max-width:400px;
+input[type="text"], input[type="email"], input[type="search"], input[type="password"] {
+	-webkit-appearance: caret;
+	-moz-appearance: caret; /* mobile firefox too! */
 }
 
 input[type=email] {
