--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,14 @@ max-width:400px;
 }
 
 input[type="text"], input[type="email"], input[type="search"], input[type="password"] {
-	-webkit-appearance: caret;
-	-moz-appearance: caret; /* mobile firefox too! */
+-webkit-appearance: caret;
+-moz-appearance: caret; /* mobile firefox too! */
+-webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+-moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
+border-style:none;
+border-radius: 5px;
+font-size: 15px;
 }
 
 input[type=email] {
