--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,8 @@ max-width:400px;
 }
 
 input[type="text"], input[type="email"], input[type="search"], input[type="password"], input[type="submit"] {
--webkit-appearance: caret;
--moz-appearance: caret; /* mobile firefox too! */
+-webkit-appearance: none;
+-moz-appearance: none; /* mobile firefox too! */
 -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
 -moz-box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
 box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.2);
