--- a/css/style.css
+++ b/css/style.css
@@ -318,4 +318,11 @@ box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
   .two {
     display:none;
   }
+  .button {
+    font-size: 12px;
+    height: 38px;
+    width:100%;
+    padding: 4px 10px;
+
+}
 }
