--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
     padding: 4px 10px;
 }
   input[type="email"] {
-width:50%;
-max-width:300px;
+width:50% !important;
+max-width:100px !imortant;
 }
 }
